--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
 	font-family: "Segoe UI", "Lucida Grande", Tahoma, sans-serif;
 	font-size: 100%;
 	width: 400px;
+	background-color: #31698A;
 }
 #status {
 	/* avoid an excessively wide status text */
@@ -11,12 +12,60 @@ body {
 	max-width: 400px;
 }
 
+.header {
+	font-size: 20pt;
+	font-family: Verdana;
+}
+
+.subhead {
+	font-size: 9pt;
+	font-family: Verdana;
+}
+
+#bl-input-box {
+	padding: 4px;
+	border: 1px black;
+	border-style: solid;
+}
+
+.btn-remove, button  {
+	background-color: #20B2AA;
+	color: white;
+	border: 5px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	margin-right: 10px;
+	text-decoration: none;
+}
+
+.btn-remove:hover, button:hover, #save-settings, #restore-defaults {
+	background-color: #87CEFA;
+	color: black;
+	transition: 0.2s;
+	-webkit-transition: 0.2s;
+	-moz-transition: 0.2s;
+}
+
+#save-settings:hover, #restore-defaults:hover {
+	background-color: #1D7FD4;
+	transition: 0.2s;
+	-webkit-transition: 0.2s;
+	-moz-transition: 0.2s;
+}
+
 .container {
 	display: block;
+	background-color: white;
+	margin-top: 10px;
+	padding: 10px;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
 }
 
 .list-container {
-	width: 75%;
+	width: 100%;
 	display: inline-block;
 }
 
